--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241214145202">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241216134846">
 	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -152,7 +152,7 @@
 								<div class="calculate-price__payment">$<span id="paymentTag">100</span> one time payment</div>
 							</div>
 							<div class="calculate-price__range" id="rangeTag">
-								<input type="range" id="tagRange" min="1" max="100" value="20">
+								<input type="range" id="tagRange" min="1" max="100" value="20" class="slider">
 								<div class="calculate-price__marks"></div>
 							</div>
 							<div class="calculate-price__labels">
@@ -166,7 +166,7 @@
 								<div class="calculate-price__payment">$<span id="paymentLocation">89</span>/m</div>
 							</div>
 							<div class="calculate-price__range" id="rangeLocation">
-								<input type="range" id="locationRange" min="1" max="100" value="1">
+								<input type="range" id="locationRange" min="1" max="100" value="1" class="slider">
 								<div class="calculate-price__marks"></div>
 							</div>
 							<div class="calculate-price__labels">
@@ -293,7 +293,7 @@
 						<img src="img/contact_us/qr_code.webp" alt="Image">
 					</div>
 					<h2 class="contact-us__title">LET’S WORK TOGETHER</h2>
-					<form action="/foo/bar" method="post" class="contact-us__form form" data-goto-error>
+					<form action="#" method="post" class="contact-us__form form" data-goto-error>
 						<select name="form[]" class="form__select">
 							<option value="How Can We Help You?">How Can We Help You?</option>
 							<option value="How Can We Help You?">How Can We Help You?</option>
@@ -340,7 +340,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241214145202"></script>
+	<script src="js/app.min.js?_v=20241216134846"></script>
 </body>
 
 </html>
