--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241216134846">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241216183413">
 	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +14,13 @@
 
 <body>
 	<div class="wrapper">
+		<!-- Header block -->
 		<header class="header">
 			<div class="header__container">
-				<a href="#" class="header__logo"><img src="img/icons/logo.svg" alt="Logotype"><span>tap2serve</span></a>
+				<div class="header__actions">
+					<button type="button" class="header__icon icon-menu"><span></span></button>
+					<a href="#" class="header__logo"><img src="img/icons/logo.svg" alt="Logotype"><span>tap2serve</span></a>
+				</div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
@@ -26,10 +30,7 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="header__actions">
-					<a href="#" class="header__button button button--border" data-goto-header data-goto=".contact-us">Contact us</a>
-					<button type="button" class="header__icon icon-menu"><span></span></button>
-				</div>
+				<a href="#" class="header__button button button--border" data-goto-header data-goto=".contact-us">Contact us</a>
 			</div>
 		</header>
 		<main class="page">
@@ -148,16 +149,15 @@
 					<div class="price__calculate calculate-price">
 						<div class="calculate-price__body">
 							<div class="calculate-price__header">
-								<div class="calculate-price__count"><span id="tagCount">10</span> tags</div>
+								<div class="calculate-price__count"><span id="tagCount">12</span> tags</div>
 								<div class="calculate-price__payment">$<span id="paymentTag">100</span> one time payment</div>
 							</div>
 							<div class="calculate-price__range" id="rangeTag">
-								<input type="range" id="tagRange" min="1" max="100" value="20" class="slider">
-								<div class="calculate-price__marks"></div>
+								<input type="range" id="tagRange" class="slider">
 							</div>
 							<div class="calculate-price__labels">
-								<span>1</span>
-								<span>100</span>
+								<span>12</span>
+								<span>144</span>
 							</div>
 						</div>
 						<div class="calculate-price__body">
@@ -166,12 +166,11 @@
 								<div class="calculate-price__payment">$<span id="paymentLocation">89</span>/m</div>
 							</div>
 							<div class="calculate-price__range" id="rangeLocation">
-								<input type="range" id="locationRange" min="1" max="100" value="1" class="slider">
-								<div class="calculate-price__marks"></div>
+								<input type="range" id="locationRange" class="slider">
 							</div>
 							<div class="calculate-price__labels">
 								<span>1</span>
-								<span>100</span>
+								<span>30</span>
 							</div>
 						</div>
 						<div class="calculate-price__checkboxes checkboxes">
@@ -293,32 +292,32 @@
 						<img src="img/contact_us/qr_code.webp" alt="Image">
 					</div>
 					<h2 class="contact-us__title">LET’S WORK TOGETHER</h2>
-					<form action="#" method="post" class="contact-us__form form" data-goto-error>
-						<select name="form[]" class="form__select">
+					<form action="#" id="contactForm" class="contact-us__form form">
+						<select name="selectOptions" class="form__select">
 							<option value="How Can We Help You?">How Can We Help You?</option>
-							<option value="How Can We Help You?">How Can We Help You?</option>
-							<option value="How Can We Help You?">How Can We Help You?</option>
+							<option value="Option 2">Option 2</option>
+							<option value="Option 2">Option 3</option>
 						</select>
 						<div class="form__items">
 							<div class="form__item">
-								<input type="text" name="form[]" id="username" class="form__input" placeholder=" " data-validate data-required>
+								<input type="text" name="name" id="username" class="form__input" placeholder=" " required>
 								<label for="username" class="form__label">Name*</label>
 							</div>
 							<div class="form__item">
-								<input type="email" name="form[]" id="email" class="form__input" placeholder=" " data-validate data-required="email">
+								<input type="email" name="email" id="email" class="form__input" placeholder=" " required>
 								<label for="email" class="form__label">Email*</label>
 							</div>
 							<div class="form__item">
-								<input type="tel" name="form[]" id="phone" class="form__input" placeholder=" " data-validate data-required>
+								<input type="tel" name="phone" id="phone" class="form__input" placeholder=" " required>
 								<label for="phone" class="form__label">Phone*</label>
 							</div>
 							<div class="form__item">
-								<input type="text" name="form[]" id="organization" class="form__input" placeholder=" " data-validate data-required>
+								<input type="text" name="organization" id="organization" class="form__input" placeholder=" " required>
 								<label for="organization" class="form__label">Organization*</label>
 							</div>
 						</div>
 						<div class="form__item">
-							<textarea name="form[]" id="message" placeholder=" " class="form__input form__input--message"></textarea>
+							<textarea name="message" id="message" placeholder=" " class="form__input form__input--message"></textarea>
 							<label for="message" class="form__label form__label--message">Message</label>
 						</div>
 						<button type="submit" class="form__button button">Send</button>
@@ -340,7 +339,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241216134846"></script>
+	<script src="js/app.min.js?_v=20241216183413"></script>
 </body>
 
 </html>
