--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 	<title>tap2serve</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
 	<link rel="stylesheet" href="css/style.min.css?_v=20241216183413">
-	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
-	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -339,7 +336,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241216183413"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
