--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>tap2serve</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241216191420">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241216204553">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -141,6 +141,8 @@
 							<p>To start running a more profitable business, Monetize your client’s guest Wi-Fi and manage all customer</p>
 						</div>
 						<div class="content-block__value" id="totalValue">$189</div>
+						<div class="content-block__price-item">First month: <span id="firstMonth">$0</span></div>
+						<div class="content-block__price-item">Second and Subsequent months: <span id="nextMonths">$0</span></div>
 						<a href="#" data-goto-header data-goto=".contact-us" class="button">Contact us</a>
 					</div>
 					<div class="price__calculate calculate-price">
@@ -336,7 +338,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.js"></script>
+	<script src="js/app.min.js?_v=20241216204553"></script>
 </body>
 
 </html>
