--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>tap2serve</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.min.css?_v=20241216220415">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241217135215">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -15,8 +15,8 @@
 		<header class="header">
 			<div class="header__container">
 				<div class="header__actions">
-					<button type="button" class="header__icon icon-menu"><span></span></button>
-					<a href="#" class="header__logo"><img src="img/icons/logo.svg" alt="Logotype"><span>tap2serve</span></a>
+					<button type="button" class="header__icon icon-menu" aria-label="burger menu icon"><span></span></button>
+					<a href="#" class="header__logo"><img src="img/icons/logo.svg" alt="Logo of tap2serve featuring the text 'tap2serve' prominently displayed in a modern design."><span>tap2serve</span></a>
 				</div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
@@ -42,11 +42,11 @@
 					</div>
 					<div class="hero__media">
 						<div class="hero__img-waiter">
-							<img src="img/hero/hero_img_waiter.webp" alt="Image">
+							<img src="img/hero/hero_img_waiter.webp" alt="A smiling waiter holding a device responds with 'One moment'.">
 							<div class="hero__message hero__message--waiter">One moment</div>
 						</div>
 						<div class="hero__img-client">
-							<img src="img/hero/hero_img_client.webp" alt="Image">
+							<img src="img/hero/hero_img_client.webp" alt="A young woman sitting at a table with a drink holds her phone and requests, 'Refill my drink'.">
 							<div class="hero__message hero__message--client">Refill my drink</div>
 						</div>
 					</div>
@@ -57,35 +57,35 @@
 					<h2 class="how-it-works__title title">How it <span>works</span></h2>
 					<div class="how-it-works__qr-codes qr-codes">
 						<div class="qr-codes__item qr-codes__item--1">
-							<img src="img/how_it_works/qr_01.webp" alt="Image">
+							<img src="img/how_it_works/qr_01.webp" alt="QR Code">
 						</div>
 						<div class="qr-codes__item qr-codes__item--2">
-							<img src="img/how_it_works/qr_02.webp" alt="Image">
+							<img src="img/how_it_works/qr_02.webp" alt="QR Code">
 						</div>
 						<div class="qr-codes__item qr-codes__item--3">
-							<img src="img/how_it_works/qr_03.webp" alt="Image">
+							<img src="img/how_it_works/qr_03.webp" alt="QR Code">
 						</div>
 						<div class="qr-codes__item qr-codes__item--4">
-							<img src="img/how_it_works/qr_04.webp" alt="Image">
+							<img src="img/how_it_works/qr_04.webp" alt="QR Code">
 						</div>
 						<div class="qr-codes__decor">
-							<img src="img/how_it_works/blob_decor.svg" alt="Image">
+							<img src="img/how_it_works/blob_decor.svg" alt="Blob decor.">
 						</div>
 					</div>
 					<div class="how-it-works__steps steps">
 						<div class="steps__step">
-							<img src="img/how_it_works/num_1.svg" class="steps__num" alt="Image">
+							<img src="img/how_it_works/num_1.svg" class="steps__num" alt="Number One.">
 							<div class="steps__content">
-								<img src="img/how_it_works/oval_01.svg" alt="Image">
+								<img src="img/how_it_works/oval_01.svg" alt="Decorative element - oval.">
 								<div class="steps__text">
 									<p>We <strong>make an NFC/QR</strong> tag with a selected design, you place them directly on a table.</p>
 								</div>
 							</div>
 						</div>
 						<div class="steps__step">
-							<img src="img/how_it_works/num_2.svg" class="steps__num" alt="Image">
+							<img src="img/how_it_works/num_2.svg" class="steps__num" alt="Number Two.">
 							<div class="steps__content">
-								<img src="img/how_it_works/oval_02.svg" alt="Image">
+								<img src="img/how_it_works/oval_02.svg" alt="Decorative element - oval.">
 								<div class="steps__text">
 									<p>When a customer taps their device against the NFC/QR tag, the device reads the information stored on the tag and <strong>displays available actions</strong>.</p>
 								</div>
@@ -121,13 +121,13 @@
 					</div>
 					<div class="monetize__media media-monetize">
 						<div class="media-monetize__img media-monetize__img--person-1">
-							<img src="img/monetize/monetize_img_person_1.webp" alt="Image">
+							<img src="img/monetize/monetize_img_person_1.webp" alt="A smiling man wearing sunglasses outdoors in a sunny environment.">
 						</div>
 						<div class="media-monetize__img media-monetize__img--person-2">
-							<img src="img/monetize/monetize_img_person_2.webp" alt="Image">
+							<img src="img/monetize/monetize_img_person_2.webp" alt="A happy woman sitting with a laptop, raising her arm in excitement against a bright yellow background.">
 						</div>
 						<div class="media-monetize__img media-monetize__img--wifi">
-							<img src="img/monetize/monetize_img_wifi.webp" alt="Image">
+							<img src="img/monetize/monetize_img_wifi.webp" alt="A close-up of a person holding a smartphone displaying a 'Free WiFi' connection screen.">
 						</div>
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 			<section class="page__price price">
 				<div class="price__container">
 					<div class="price__content content-block">
-						<div class="content-block__label">Calculate yourself</div>
+						<div class="content-block__label">Calculate yourself. All prices are in Canadian Dollars (CAD).</div>
 						<h2 class="content-block__title title">How much does it cost?</h2>
 						<div class="content-block__text">
 							<p>To start running a more profitable business, Monetize your client’s guest Wi-Fi and manage all customer</p>
@@ -152,7 +152,7 @@
 								<div class="calculate-price__payment">$<span id="paymentTag">100</span> one time payment</div>
 							</div>
 							<div class="calculate-price__range" id="rangeTag">
-								<input type="range" id="tagRange" class="slider">
+								<input type="range" id="tagRange" class="slider" aria-label="Range">
 							</div>
 							<div class="calculate-price__labels">
 								<span>12</span>
@@ -165,7 +165,7 @@
 								<div class="calculate-price__payment">$<span id="paymentLocation">89</span>/m</div>
 							</div>
 							<div class="calculate-price__range" id="rangeLocation">
-								<input type="range" id="locationRange" class="slider">
+								<input type="range" id="locationRange" class="slider" aria-label="Range">
 							</div>
 							<div class="calculate-price__labels">
 								<span>1</span>
@@ -205,14 +205,14 @@
 						</ul>
 					</div>
 					<div class="insights__chart">
-						<img src="img/insights/insights_chart.svg" alt="Image">
+						<img src="img/insights/insights_chart.svg" alt="A dashboard with progress bars, line graphs, circular charts, and wave graphs showing percentages and trends in blue, purple, yellow, and black.">
 					</div>
 				</div>
 			</section>
 			<section class="page__key-features key-features">
 				<div class="key-features__container">
 					<div class="key-features__qr-code">
-						<img src="img/features/qr_code.webp" alt="Image">
+						<img src="img/features/qr_code.webp" alt="QR Code">
 					</div>
 					<h2 class="key-features__title title">Our key features</h2>
 					<div class="key-features__items">
@@ -266,7 +266,7 @@
 						<a href="#" data-goto-header data-goto=".contact-us" class="button">Contact us</a>
 					</div>
 					<div class="marketing__img">
-						<img src="img/marketing/marketing_img.webp" alt="Image">
+						<img src="img/marketing/marketing_img.webp" alt="A collage of mobile app icons representing top business applications for enhancing productivity and efficiency.">
 					</div>
 				</div>
 			</section>
@@ -275,7 +275,7 @@
 					<div class="turn-wifi__decor turn-wifi__decor--1"></div>
 					<div class="turn-wifi__decor turn-wifi__decor--2"></div>
 					<div class="turn-wifi__qr-code">
-						<img src="img/turn_wifi/qr_code.webp" alt="Image">
+						<img src="img/turn_wifi/qr_code.webp" alt="QR Code">
 					</div>
 					<div class="turn-wifi__body">
 						<h2 class="turn-wifi__title title">Turn your Wi-Fi into a tool for driving business growth</h2>
@@ -288,11 +288,11 @@
 			<section class="page__contact-us contact-us">
 				<div class="contact-us__container">
 					<div class="contact-us__qr-code">
-						<img src="img/contact_us/qr_code.webp" alt="Image">
+						<img src="img/contact_us/qr_code.webp" alt="QR Code">
 					</div>
 					<h2 class="contact-us__title">LET’S WORK TOGETHER</h2>
 					<form action="#" id="contactForm" class="contact-us__form form">
-						<select name="selectOptions" class="form__select">
+						<select name="selectOptions" class="form__select" aria-label="Select Options">
 							<option value="How Can We Help You?">How Can We Help You?</option>
 							<option value="Option 2">Option 2</option>
 							<option value="Option 2">Option 3</option>
@@ -338,7 +338,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241216220415"></script>
+	<script src="js/app.min.js?_v=20241217135215"></script>
 </body>
 
 </html>
